--- a/Apps.Lark/Apps.Lark.csproj
+++ b/Apps.Lark/Apps.Lark.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <Product>Lark [Beta]</Product>
-        <Description>Description</Description>
+        <Description>Lark's comprehensive and in-depth open capabilities serve as a hub of information and an entry point for businesses</Description>
         <Version>1.0.1</Version>
         <AssemblyName>Apps.Lark</AssemblyName>
     </PropertyGroup>
