--- a/Apps.Lark/Apps.Lark.csproj
+++ b/Apps.Lark/Apps.Lark.csproj
@@ -10,11 +10,9 @@
         <AssemblyName>Apps.Lark</AssemblyName>
     </PropertyGroup>
 
-    <ItemGroup>
-      <Compile Remove="image\**" />
-      <EmbeddedResource Remove="image\**" />
-      <None Remove="image\**" />
-    </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource CopyToOutputDirectory="Always" Include="image\icon.png"></EmbeddedResource>
+	</ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.11.0" />
