Added action 'Download attachments from base table record'

--- a/Tests.Lark/Tests.Lark.csproj
+++ b/Tests.Lark/Tests.Lark.csproj
@@ -40,4 +40,6 @@
     <Folder Include="TestFiles\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://json.schemastore.org/assetlinks.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
