--- a/Apps.Lark/Apps.Lark.csproj
+++ b/Apps.Lark/Apps.Lark.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <Product>Lark [Beta]</Product>
         <Description>Lark's comprehensive and in-depth open capabilities serve as a hub of information and an entry point for businesses</Description>
-        <Version>1.0.12</Version>
+        <Version>1.0.13</Version>
         <AssemblyName>Apps.Lark</AssemblyName>
     </PropertyGroup>
 
@@ -15,8 +15,8 @@
 	</ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.11.0" />
-        <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.25" />
+        <PackageReference Include="Blackbird.Applications.SDK.Blueprints" Version="1.0.0" />
+        <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.26" />
     </ItemGroup>
 
 </Project>
