--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ FodyWeavers.xsd
 /Tests.Lark/appsettings.json
 /Tests.Lark/TestFiles/Output/
 /Tests.Lark/appsettings.json
+/Tests.Lark/appsettings.json
