--- a/Tests.Lark/Tests.Lark.csproj
+++ b/Tests.Lark/Tests.Lark.csproj
@@ -41,6 +41,6 @@
     <Folder Include="TestFiles\Output\" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://json.schemastore.org/assetlinks.json" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
